[package]
name = "test-escrow"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "*"
thiserror = "*"
spl-token = {version = "*", features = ["no-entrypoint"]}


[lib]
crate-type = ["cdylib", "lib"]